welcome.lessons.welcome.methods.picture.PatternPicture.scala.error
PatternPicture:4: error: ')' expected but ';' found.
def forme () {avance();marquage(Color.red;avance();marquage(Color.blue);avance()
                                         ^