welcome.lessons.welcome.methods.picture.PatternPicture.scala.code
override def run() {
def marquage(c:Color) {setCouleurBrosse(c);baisseBrosse;leveBrosse}
def forme () {avance();marquage(Color.red;avance();marquage(Color.blue);avance()
gauche();avance();marquage(Color.blue);avance();marquage(Color.green);avance()
gauche();avance();marquage(Color.green);avance();marquage(Color.yellow);avance()
gauche();avance();marquage(Color.yellow);avance();marquage(Color.red);avance()
gauche()}

forme()

}
